# mlops_binary_image_classifications

./: Dockerfile  Dockerfile.train  Makefile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt  run_pipeline.py  setup.py
.github/workflows/: ci-cd.yaml
config/: config.yaml
docs/: GITHUB_ACTIONS_SETUP.md
k8s/: deployment-local.yaml  deployment.yaml
mlruns/0/: meta.yaml
mlruns/584908570533354060/: meta.yaml
mlruns/584908570533354060/7e537e26d8974b2291e7c0243e37c58f/: meta.yaml
mlruns/584908570533354060/7e537e26d8974b2291e7c0243e37c58f/metrics/: best_val_accuracy  test_loss  test_recall
mlruns/584908570533354060/7e537e26d8974b2291e7c0243e37c58f/outputs/m-7b58645d3d304604bdb360417400f2e7/: meta.yaml
mlruns/584908570533354060/7e537e26d8974b2291e7c0243e37c58f/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/584908570533354060/b081983764894febafdc81d3c1131ea1/: meta.yaml
mlruns/584908570533354060/b081983764894febafdc81d3c1131ea1/metrics/: best_val_accuracy  final_train_accuracy  test_auc  test_loss
mlruns/584908570533354060/b081983764894febafdc81d3c1131ea1/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/584908570533354060/models/m-7b58645d3d304604bdb360417400f2e7/: meta.yaml
mlruns/584908570533354060/models/m-d16fdb6b0e794f548b510043a1b3ee60/: meta.yaml
models/final/: test_metrics.json  training_history.json
scripts/: smoke_test.py  smoke_test.sh
src/: __init__.py
src/api/: main.py
src/data/: __init__.py  download_data.py  preprocessing.py
src/models/: __init__.py  evaluate.py  model.py  train.py
tests/: test_mlops.py
(+12 files in other folders)
